syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

option csharp_namespace = "NServiceBus.IntegrationTesting.OutOfProcess";
package NServiceBus.IntegrationTesting;

service RemoteEndpoint {
    rpc Stop (google.protobuf.Empty) returns (google.protobuf.Empty);
    rpc EndpointStarted (google.protobuf.Empty) returns (stream EndpointStartedEvent);
}

message EndpointStartedEvent {
    string endpointName = 1;
}